# gitlab-badges

./: README.md  badges.yml  pyproject.toml  requirements-dev.in  requirements.in
gitlab_badges/: main.py  sonar.py
src/gitlab-badges/: main.py  sonar.py
